minor typos and description of header image

--- a/cv.html
+++ b/cv.html
@@ -143,7 +143,7 @@
                                          href="https://scholar.google.de/citations?user=URsnzm8AAAAJ"
                                          style="vertical-align: top">
                                          <img
-                                            src="images/Google_scholar_logo.svg.png"
+                                            src="images/Google_scholar_logo.png"
                                             style="width: 1em; margin-inline-start: 0.5em"
                                             alt="Google Scholar icon"/>
                                             https://scholar.google.de/citations?user=URsnzm8AAAAJ
