--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                              href="https://scholar.google.de/citations?user=URsnzm8AAAAJ"
                              style="vertical-align: top">
                              <img
-                                src="images/Google_scholar_logo.svg.png"
+                                src="images/Google_scholar_logo.png"
                                 style="width: 1em; margin-inline-start: 0.5em"
                                 alt="Google Scholar icon"/>
                                 https://scholar.google.de/citations?user=URsnzm8AAAAJ
@@ -308,6 +308,10 @@
                             </svg>
                             https://www.linkedin.com/in/philipp-otto-0a9887264/
                         </a>
+                        </p>
+                        
+                        <p>
+                        Gamrie Bay, shown in the header image, lies on the rugged north coast of Aberdeenshire between the villages of Gardenstown and Crovie. The bay is noted for its striking geology — steep cliffs, ravines, and exposed sedimentary layers studied in Scottish geological surveys — and serves as a case for environmental statistics on coastal change, erosion, and flooding.
                         </p>
 						<footer>
 							<a href="cv.html" class="button">Continue to my CV</a>
