--- a/cv.html
+++ b/cv.html
@@ -203,8 +203,10 @@
                                 <dl>
                                     <dt><b>Since 01/07/2024:</b></dt>
                                     <dd>Professor of Statistics and Data Science, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
-                                    <dt><b>Since 01/02/2023:</b></dt>
-                                    <dd>Guest/Visiting Professor at the University of Bergamo, PhD course on regularised estimation methods in spatial statistics, M.Sc. course Statistics for Digital and Organisational Innovation</dd>
+                                    <dt><b>2026:</b></dt>
+                                    <dd>Visiting Professor at the University Malaya, Kuala Lumpur, Malaysia</dd>
+                                    <dt><b>2023 - 2025:</b></dt>
+                                    <dd>Visiting Professor at the University of Bergamo, Italy</dd>
                                     <dt><b>01/09/2023 - 30/06/2024:</b></dt>
                                     <dd>Associate Professor (Reader) in Statistics and Data Analytics, School of Mathematics and Statistics, University of Glasgow, United Kingdom</dd>
                                   <dt><b>01/09/2018 - 31/08/2023:</b></dt>
