--- a/research.html
+++ b/research.html
@@ -161,7 +161,7 @@
                                     <p>
                                         <ul>
                                             <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S., Schmid, W., Bera, A. K. (2025): Spatial and Spatiotemporal Volatility Models: A Review. <span class="highlight-journal">Journal of Economic Surveys</span> 39(3) <a href="https://doi.org/10.1111/joes.12643">(DOI)</a></li>
-                                            <li>Mattera, G., Mattera, R., <strong>Otto, P.</strong> (2025): Hybrid Statistical Process Monitoring of Wire Arc Additive Manufacturing with Frequency Informed Deep Learning. <span class="highlight-journal">Quality and Reliability Engineering International</span> <a href="https://doi.org/10.1002/qre.70041">(DOI)</a></li>
+                                            <li>Mattera, G., Mattera, R., <strong>Otto, P.</strong> (2025): Hybrid Statistical Process Monitoring of Wire Arc Additive Manufacturing with Frequency Informed Deep Learning. <span class="highlight-journal">Quality and Reliability Engineering International</span> 41(8) <a href="https://doi.org/10.1002/qre.70041">(DOI)</a></li>
                                             <li>Tedesco, L., Rodeschini, J., <strong>Otto, P.</strong> (2025): Computational Benchmark Study in Spatio-Temporal Statistics with a Hands-On Guide to Optimise R. <span class="highlight-journal">Environmetrics</span> 36(5) <a href="https://doi.org/10.1002/env.70017">(DOI)</a></li>
                                             <li>Colombo, P., Mattera, R., <strong>Otto, P.</strong> (2025): Simple yet effective: a comparative study of statistical models for yearly hurricane forecasting. <span class="highlight-journal">Environmetrics</span> <a href="https://doi.org/10.1002/env.70009">(DOI)</a></li>
                                             <li>Morelli, C., Boccaletti, S., Maranzano, P., <strong>Otto, P.</strong> (2025): Multidimensional spatiotemporal clustering – An application to environmental sustainability scores in Europe. <span class="highlight-journal">Environmetrics</span> 36(2) <a href=" http://dx.doi.org/10.1002/env.2893">(DOI)</a></li>
@@ -174,7 +174,7 @@
                                     </h5>
                                     <p>
                                         <ul>
-                                            <li>Johannssen, A., <strong>Otto, P.</strong>, Mozharovskyi, P. (2025): Network Monitoring with Machine Learning Methods. <span class="highlight-journal">Computers & Industrial Engineering</span> (<a href="https://doi.org/10.1016/j.cie.2025.111557">DOI</a>)</li>
+                                            <li>Johannssen, A., <strong>Otto, P.</strong>, Mozharovskyi, P. (2025): Network Monitoring with Machine Learning Methods. <span class="highlight-journal">Computers & Industrial Engineering</span> (<a href="https://doi.org/10.1016/j.cie.2025.111557">DOI</a>, <a href="https://www.sciencedirect.com/special-issue/10334HRF4P9">full special issue </a>)</li>
                                             <li>Carillo, F., Maranzano, P., <strong>Otto, P.</strong> (2025): Editorial for the special issue on New Perspectives in Statistics, Data Science and Econometrics for Agriculture, Land Use and Forestry. <span class="highlight-journal"> Journal of Agricultural, Biological and Environmental Statistics </span> 30 (<a href="https://doi.org/10.1007/s13253-025-00700-x">DOI</a>)</li>
                                         </ul>
                                     </p>
