--- a/research.html
+++ b/research.html
@@ -156,6 +156,14 @@
 									<!-- <a href="#" class="image featured"><img src="images/panorama.jpg" alt="" /></a> -->
                                     <h3>Peer-reviewed Journals</h3>
                                     <h4>
+                                    2026
+                                    </h4>
+                                    <p>
+                                        <ul>
+                                            <li>Malinovskaya, A., Killick, R., Leeming, K., <strong>Otto, P.</strong> (2026): Statistical monitoring with novel temporal edge network processes. <span class="highlight-journal">Journal of the Royal Statistical Society Series C</span> (accepted)</li>
+                                        </ul>
+                                    </p>
+                                    <h4>
                                     2025
                                     </h4>
                                     <p>
@@ -164,7 +172,7 @@
                                             <li>Mattera, G., Mattera, R., <strong>Otto, P.</strong> (2025): Hybrid Statistical Process Monitoring of Wire Arc Additive Manufacturing with Frequency Informed Deep Learning. <span class="highlight-journal">Quality and Reliability Engineering International</span> 41(8) (<a href="https://doi.org/10.1002/qre.70041">DOI</a>)</li>
                                             <li>Tedesco, L., Rodeschini, J., <strong>Otto, P.</strong> (2025): Computational Benchmark Study in Spatio-Temporal Statistics with a Hands-On Guide to Optimise R. <span class="highlight-journal">Environmetrics</span> 36(5) (<a href="https://doi.org/10.1002/env.70017">DOI</a>)</li>
                                             <li>Colombo, P., Mattera, R., <strong>Otto, P.</strong> (2025): Simple yet effective: a comparative study of statistical models for yearly hurricane forecasting. <span class="highlight-journal">Environmetrics</span> (<a href="https://doi.org/10.1002/env.70009">DOI</a>)</li>
-                                            <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2025): A Note on Dynamic Spatiotemporal ARCH Models: Small and Large Sample Results. <span class="highlight-journal">AStA Advances in Statistical Analysis</span> (<a href="https://doi.org/">DOI</a>)</li>
+                                            <li><strong>Otto, P.</strong>, Dogan, O., Taspinar, S. (2025): A Note on Dynamic Spatiotemporal ARCH Models: Small and Large Sample Results. <span class="highlight-journal">AStA Advances in Statistical Analysis</span> 109(4) (<a href="https://doi.org/10.1007/s10182-025-00552-3">DOI</a>)</li>
                                             <li>Morelli, C., Boccaletti, S., Maranzano, P., <strong>Otto, P.</strong> (2025): Multidimensional spatiotemporal clustering – An application to environmental sustainability scores in Europe. <span class="highlight-journal">Environmetrics</span> 36(2) (<a href=" http://dx.doi.org/10.1002/env.2893">DOI</a>)</li>
                                             <li>Heumann, M., Kraschewski, T., <strong>Otto, P.</strong>, Tilch, L., Brauner, T., Breitner, M. H. (2025): Factors influencing the usage of shared micromobility: Implications from Berlin. <span class="highlight-journal">Journal of Cycling and Micromobility Research</span> (<a href="https://doi.org/10.1016/j.jcmr.2025.100063">DOI</a>)</li>
                                             <li><strong>Otto, P.</strong> (2025): Discussion on “Assessing predictability of environmental time series with statistical and machine learning models” by Bonas et al. <span class="highlight-journal">Environmetrics</span> (<a href="https://doi.org/10.1002/env.2898">DOI</a>)</li>
