doi added jrssc

--- a/research.html
+++ b/research.html
@@ -160,7 +160,7 @@
                                     </h4>
                                     <p>
                                         <ul>
-                                            <li>Malinovskaya, A., Killick, R., Leeming, K., <strong>Otto, P.</strong> (2026): Statistical monitoring with novel temporal edge network processes. <span class="highlight-journal">Journal of the Royal Statistical Society Series C</span> (accepted)</li>
+                                            <li>Malinovskaya, A., Killick, R., Leeming, K., <strong>Otto, P.</strong> (2026): Statistical monitoring with novel temporal edge network processes. <span class="highlight-journal">Journal of the Royal Statistical Society Series C</span>  (<a href="https://doi.org/10.1093/jrsssc/qlag003">DOI</a>)</li>
                                         </ul>
                                     </p>
                                     <h4>
