--- a/research.html
+++ b/research.html
@@ -179,16 +179,6 @@
                                             <li><strong>Otto, P.</strong> (2025): Discussion on “Assessing predictability of environmental time series with statistical and machine learning models” by Bonas et al. <span class="highlight-journal">Environmetrics</span> (<a href="https://doi.org/10.1002/env.2898">DOI</a>)</li>
                                         </ul>
                                     </p>
-                                    <h5>
-                                    Editorials
-                                    </h5>
-                                    <p>
-                                        <ul>
-                                            <li><strong>Otto, P.</strong>, Illian, J. (2025): Advances in spatial econometrics and geostatistics: methods, theory, and applications. <span class="highlight-journal"> AStA Advances in Statistical Analysis </span> 109(4) (<a href="https://doi.org/10.1007/s10182-025-00551-4">DOI</a>)</li>
-                                            <li>Johannssen, A., <strong>Otto, P.</strong>, Mozharovskyi, P. (2025): Network Monitoring with Machine Learning Methods. <span class="highlight-journal">Computers & Industrial Engineering</span> (<a href="https://doi.org/10.1016/j.cie.2025.111557">DOI</a>, <a href="https://www.sciencedirect.com/special-issue/10334HRF4P9">full special issue </a>)</li>
-                                            <li>Carillo, F., Maranzano, P., <strong>Otto, P.</strong> (2025): Editorial for the special issue on New Perspectives in Statistics, Data Science and Econometrics for Agriculture, Land Use and Forestry. <span class="highlight-journal"> Journal of Agricultural, Biological and Environmental Statistics </span> 30 (<a href="https://doi.org/10.1007/s13253-025-00700-x">DOI</a>)</li>
-                                        </ul>
-                                    </p>
                                     <h4>
                                     2024
                                     </h4>
@@ -289,6 +279,14 @@
                                         <ul>
                                             <li> <strong>Otto, P.</strong>, Schmid, W. (2016): Detection of Spatial Change Points in the Mean and Covariances of Multivariate Simultaneous Autoregressive Models. <span class="highlight-journal">Biometrical Journal</span> 58(5) <a href="https://doi.org/10.1002/bimj.201500148">(DOI)</a></li>
                                             <li> Lange, A.-L., <strong>Otto, P.</strong> (2016): Bayes'sche Statistik in der Dienstleistungsforschung. <span class="highlight-journal">AStA Wirtschafts- und Sozialstatistisches Archiv</span> 10(4) <a href="https://doi.org/10.1007/s11943-016-0189-x">(DOI)</a></li>
+                                        </ul>
+                                    </p>
+                                    <h3>Editorials</h3>
+                                    <p>
+                                        <ul>
+                                            <li><strong>Otto, P.</strong>, Illian, J. (2025): Advances in spatial econometrics and geostatistics: methods, theory, and applications. <span class="highlight-journal"> AStA Advances in Statistical Analysis </span> 109(4) (<a href="https://doi.org/10.1007/s10182-025-00551-4">DOI</a>)</li>
+                                            <li>Johannssen, A., <strong>Otto, P.</strong>, Mozharovskyi, P. (2025): Network Monitoring with Machine Learning Methods. <span class="highlight-journal">Computers & Industrial Engineering</span> (<a href="https://doi.org/10.1016/j.cie.2025.111557">DOI</a>, <a href="https://www.sciencedirect.com/special-issue/10334HRF4P9">full special issue </a>)</li>
+                                            <li>Carillo, F., Maranzano, P., <strong>Otto, P.</strong> (2025): Editorial for the special issue on New Perspectives in Statistics, Data Science and Econometrics for Agriculture, Land Use and Forestry. <span class="highlight-journal"> Journal of Agricultural, Biological and Environmental Statistics </span> 30 (<a href="https://doi.org/10.1007/s13253-025-00700-x">DOI</a>)</li>
                                         </ul>
                                     </p>
                                     <h3>Peer-reviewed Book Chapters and Conference Proceedings</h3>
