--- a/research.html
+++ b/research.html
@@ -161,7 +161,7 @@
                                     <p>
                                         <ul>
                                             <li>Malinovskaya, A., Killick, R., Leeming, K., <strong>Otto, P.</strong> (2026): Statistical monitoring with novel temporal edge network processes. <span class="highlight-journal">Journal of the Royal Statistical Society Series C</span> (<a href="https://doi.org/10.1093/jrsssc/qlag003">DOI</a>)</li>
-                                            <li>Morelli, C., Maranzano, P., <strong>Otto, P.</strong> (2026): Spatiotemporal clustering of GHGs emissions in Europe: exploring the role of spatial component. <span class="highlight-journal">Spatial Statistics</span> (accepted)</li>
+                                            <li>Morelli, C., Maranzano, P., <strong>Otto, P.</strong> (2026): Spatiotemporal clustering of GHGs emissions in Europe: exploring the role of spatial component. <span class="highlight-journal">Spatial Statistics</span> (<a href="https://doi.org/10.1016/j.spasta.2026.100960">DOI</a>)</li>
                                         </ul>
                                     </p>
                                     <h4>
